[gd_scene load_steps=23 format=2]

[ext_resource path="res://entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/player/girl_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Audio/Sfx/RayPower.wav" type="AudioStream" id=3]
[ext_resource path="res://entities/player/Cannon.gd" type="Script" id=4]
[ext_resource path="res://entities/player/PlayerStateMachine.gd" type="Script" id=7]
[ext_resource path="res://entities/player/PlayerOutput.gd" type="Script" id=8]
[ext_resource path="res://Audio/Sfx/Jump.ogg" type="AudioStream" id=9]
[ext_resource path="res://Audio/Sfx/Roll.ogg" type="AudioStream" id=10]
[ext_resource path="res://Audio/Sfx/Leaves1.ogg" type="AudioStream" id=11]
[ext_resource path="res://entities/player/RayPower.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/textures/white_square_64x64.png" type="Texture" id=13]
[ext_resource path="res://shaders/shield.shader" type="Shader" id=14]

[sub_resource type="Animation" id=1]
resource_name = "dead"
length = 1.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("PlayerOutput")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "roll"
length = 0.56
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.46, 0.48, 0.5, 0.52, 0.54, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.46, 0.56 ),
"transitions": PoolRealArray( 1, 1, 0.000622343, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 360.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.12, 0.18, 0.4, 0.46, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 20 ), Vector2( 0, 20 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("PlayerOutput")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0.02 )
}

[sub_resource type="Animation" id=5]
length = 0.95
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("PlayerOutput")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.414946,
"start_offset": 0.0,
"stream": ExtResource( 11 )
}, {
"end_offset": 0.591194,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 6752, 3008 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 24.4246
height = 108.258

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 14 )
shader_param/line_width = 0.05
shader_param/color = Color( 0, 1, 0.133333, 1 )
shader_param/border_color = Color( 1, 1, 1, 1 )
shader_param/voro = Vector2( 30, 30 )
shader_param/firing_angle = 0.498
shader_param/aspect = 1.0
shader_param/shield_reveal_percent = 0.254
shader_param/shield_rotation_speed = 0.3
shader_param/distortion = 21.251
shader_param/shield_color = Color( 0.113725, 0.72549, 0.866667, 1 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/roll = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Body" type="Sprite" parent="."]
material = SubResource( 7 )
scale = Vector2( 0.5, 0.5 )
texture = SubResource( 8 )
offset = Vector2( 50, 0 )
hframes = 15
vframes = 8

[node name="Cannon" type="Node2D" parent="Body"]
position = Vector2( 2.80494, -11.0062 )
scale = Vector2( 2, 2 )
script = ExtResource( 4 )
laser_range = 1000.0

[node name="CannonRaycast" type="RayCast2D" parent="Body/Cannon"]
cast_to = Vector2( 0, 0 )
collision_mask = 5

[node name="FiringTimer" type="Timer" parent="Body/Cannon"]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="FloorRaycast1" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 0, 74 )
cast_to = Vector2( 0, 5 )

[node name="FloorRaycast2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -15, 74 )
cast_to = Vector2( 0, 5 )

[node name="FloorRaycast3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 15, 74 )
cast_to = Vector2( 0, 5 )

[node name="PlayerOutput" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Sorround"
script = ExtResource( 8 )

[node name="RayPower" parent="." instance=ExtResource( 12 )]
position = Vector2( 4.1311, -8.7307 )

[node name="Shield" type="Sprite" parent="."]
material = SubResource( 10 )
position = Vector2( 2.84217e-14, 12.2395 )
scale = Vector2( 3.04297, 3.04297 )
texture = ExtResource( 13 )
offset = Vector2( 0.530815, -5.37214 )

[node name="PowerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sorround"
